[gd_scene load_steps=9 format=3 uid="uid://cv024iysr8mnf"]

[ext_resource type="Script" uid="uid://ba10hbvalwftb" path="res://scripts/play_menu.gd" id="1_s1p7o"]
[ext_resource type="Texture2D" uid="uid://dldufaeejm5ls" path="res://textures/menu/temp menu/background.png" id="2_fu2w5"]
[ext_resource type="Texture2D" uid="uid://d0i7ooo41r8s2" path="res://textures/menu/title.png" id="3_bth8g"]
[ext_resource type="Texture2D" uid="uid://b228ka76aj4t3" path="res://textures/menu/couchVersus.png" id="3_bxbqo"]
[ext_resource type="Texture2D" uid="uid://te0v7sv8uk8u" path="res://textures/menu/versusDevice.png" id="5_cnhlh"]
[ext_resource type="Texture2D" uid="uid://bwqwkfy27ttu3" path="res://textures/menu/versusOnline.png" id="5_hh1rf"]
[ext_resource type="Texture2D" uid="uid://d5sf8n5b050g" path="res://textures/menu/exit.png" id="6_464ep"]
[ext_resource type="Texture2D" uid="uid://dvnl4yiifhb1f" path="res://textures/menu/settings.png" id="7_xpwod"]

[node name="playMenu" type="Node2D"]
texture_filter = 1
script = ExtResource("1_s1p7o")

[node name="background" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("2_fu2w5")

[node name="title" type="TextureRect" parent="."]
offset_left = 94.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 34.0
scale = Vector2(2, 2)
texture = ExtResource("3_bth8g")
expand_mode = 1
stretch_mode = 2

[node name="couchVersus" type="TextureButton" parent="."]
offset_left = 170.0
offset_top = 90.0
offset_right = 201.0
offset_bottom = 98.0
scale = Vector2(2, 2)
texture_normal = ExtResource("3_bxbqo")

[node name="couchDevice" type="TextureButton" parent="."]
offset_left = 129.0
offset_top = 116.0
offset_right = 160.0
offset_bottom = 124.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_cnhlh")

[node name="onlineVersus" type="TextureButton" parent="."]
offset_left = 88.0
offset_top = 90.0
offset_right = 119.0
offset_bottom = 98.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_hh1rf")

[node name="exit" type="TextureButton" parent="."]
offset_left = 50.0
offset_top = 10.0
offset_right = 62.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture_normal = ExtResource("6_464ep")

[node name="options" type="TextureButton" parent="."]
offset_left = 246.0
offset_top = 10.0
offset_right = 258.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture_normal = ExtResource("7_xpwod")

[connection signal="pressed" from="couchDevice" to="." method="_on_couch_device_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
