[gd_scene load_steps=8 format=3 uid="uid://cd3s725fortc6"]

[ext_resource type="Script" uid="uid://ba10hbvalwftb" path="res://scripts/play_menu.gd" id="1_2aoxi"]
[ext_resource type="Texture2D" uid="uid://dldufaeejm5ls" path="res://textures/menu/temp menu/background.png" id="2_xtji2"]
[ext_resource type="Texture2D" uid="uid://d0i7ooo41r8s2" path="res://textures/menu/title.png" id="3_3eu7o"]
[ext_resource type="Texture2D" uid="uid://uv3tj7otrrmb" path="res://textures/menu/sandbox.png" id="4_ppa8m"]
[ext_resource type="Texture2D" uid="uid://c6mr7ia20heim" path="res://textures/menu/notationSandbox.png" id="5_2aoxi"]
[ext_resource type="Texture2D" uid="uid://d5sf8n5b050g" path="res://textures/menu/exit.png" id="7_iadlw"]
[ext_resource type="Texture2D" uid="uid://dvnl4yiifhb1f" path="res://textures/menu/settings.png" id="8_pyy0h"]

[node name="sandboxMenu" type="Node2D"]
texture_filter = 1
script = ExtResource("1_2aoxi")

[node name="background" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("2_xtji2")

[node name="title" type="TextureRect" parent="."]
offset_left = 94.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 34.0
scale = Vector2(2, 2)
texture = ExtResource("3_3eu7o")
expand_mode = 1
stretch_mode = 2

[node name="sandbox" type="TextureButton" parent="."]
offset_left = 170.0
offset_top = 90.0
offset_right = 182.0
offset_bottom = 102.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_ppa8m")

[node name="notationSandbox" type="TextureButton" parent="."]
offset_left = 126.0
offset_top = 90.0
offset_right = 138.0
offset_bottom = 102.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_2aoxi")

[node name="exit" type="TextureButton" parent="."]
offset_left = 50.0
offset_top = 10.0
offset_right = 62.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture_normal = ExtResource("7_iadlw")

[node name="options" type="TextureButton" parent="."]
offset_left = 246.0
offset_top = 10.0
offset_right = 258.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture_normal = ExtResource("8_pyy0h")

[connection signal="pressed" from="sandbox" to="." method="_on_sandbox_pressed"]
[connection signal="pressed" from="notationSandbox" to="." method="_on_notation_sandbox_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
